international-bulletin-board-app/src/App.css
body {
  height: 100vh;
}

.notebackground {
  background-color: #feff9c;
}
#notesBox {
  min-height: 75vh;
}

#board {
  background-image: url("pics/board.jpg");
  border: 5px ridge rgb(199, 199, 199);
}

#board > a {
  height: 5.2em;
}

#footerInfo {
  background-color: rgb(61, 61, 61);
  color: white;
}

.note {
  color: black;
  width: 5em;
  height: 5em;
  overflow: hidden;
  text-overflow: ellipsis;
  background-color: rgb(248, 248, 157);
  cursor: pointer;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
  /* https://getcssscan.com/css-box-shadow-examples */
}

button {
  background-color: rgb(98, 50, 175) !important;
  color: white !important;
  padding: 0.5em 1em;
  border: none;
}

.backdrop {
  background-color: rgba(39, 39, 39, 0.61);
  height: 100%;
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
}

#parentForm {
  filter: none !important;
  margin: auto;
}

#noteForm {
  background-color: white;
  border: 1px solid black;
  position: relative;
}

#noteView {
  position: relative;
}

#noteText {
  max-height: 10em;
  min-height: 5em;
  width: 100%;
}

#repliesView {
  position: relative;
  width: 100%;
}

#replyNavigation {
  margin: auto;
}

.select-color {
  width: 50%;
  z-index: 10;
}

#selectColor {
  color: rgb(48, 48, 48) !important;
}

footer + div:not(#footerInfo) {
  /* position: absolute;
  top: 0;
  left: 0;
  right: 0; */
  margin-left: auto;
  margin-right: auto;
}

.close {
  position: absolute;
  top: -10px;
  right: -10px;
}

.prevReply {
  position: absolute;
  top: -5%;
  right: 45%;
  z-index: 5;
}

.nextReply {
  position: absolute;
  top: 95%;
  right: 45%;
  z-index: 5;
}

.prevNotes {
  position: absolute;
  top: 40%;
  left: 3%;
  width: 3%;
}

.nextNotes {
  position: absolute;
  top: 40%;
  right: 3%;
  width: 3%;
}

@media (min-width: 768px) {
  .slide-right {
    animation: slide 0.5s;
    position: relative;
  }

  @keyframes slide {
    0% {
      transform: translate(100vw);
    }
    100% {
      transform: translate(0);
    }
  }

  .slide-center {
    position: relative;
    animation: center-slide 0.5s;
  }

  @keyframes center-slide {
    0% {
      transform: translate(50%);
    }
    100% {
      transform: translate(0);
    }
  }

  .slide-board-left {
    position: relative;
    animation: center-slide-left 0.5s;
  }

  @keyframes center-slide-left {
    0% {
      transform: translate(-50%);
    }
    100% {
      transform: translate(0%);
    }
  }

  .slide-board-right {
    position: relative;
    animation: center-slide-right 0.5s;
  }

  @keyframes center-slide-right {
    0% {
      transform: translate(50%);
    }
    100% {
      transform: translate(0%);
    }
  }
}

@media (max-width: 386px) {
  footer {
    padding-bottom: 8em;
  }
}

